# dvisti

./: .gitmodules  README.md
src/: CMakeLists.txt  data.cpp  data.h  mainwindow.cpp  mainwindow.h
src/DX21/: dx21.cpp  dx21.h  dx21.ui  dx21_operator.cpp  dx21_operator.h  dx21_operator.ui  dx21_voice.cpp  dx21_voice.h  dx21_widget.cpp  dx21_widget.h  dx21_widget.ui  fm_operator.cpp  fm_operator.h  fm_voice.cpp  fm_voice.h
src/DX21/data/: dx21_a.syx  dx21_b.syx  dx21_c.syx  dx21_d.syx
src/DX7/: dx7_algorithm.cpp  dx7_algorithm.h
